<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="154dp"
        android:layout_height="179dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/icon1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/input_account"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/account"
            android:inputType="number" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <ProgressBar
            android:id="@+id/wait_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:alpha="0.9"
            android:background="@drawable/round_button"
            android:drawableEnd="@drawable/gou"
            android:text="登录"
            android:textColor="@color/colorTextMsg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toRepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/forget_pwd"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/to_register"
                android:textAlignment="textEnd" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>