<resources>
    <string name="app_name">FIT</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="to_register">没有账号？去注册？</string>
    <string name="forget_pwd">忘记密码？点击这里</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请确认密码</string>
    <string name="input_msg">输入验证码</string>
    <string name="change_pw">重新设置密码</string>
    <string name="button_msg">消息</string>
    <string name="button_frd">好友</string>
    <string name="calorie">热量：</string>
    <string name="return_bt">返回</string>
    <string name="logout">退出当前账号</string>
    <string name="btn_send">发送</string>
    <string name="report_history">查看历史周报</string>
    <string name="report_now">查看本周报表</string>
    <string name="report_title">饮食报表</string>
    <string name="progress">记录加载中...</string>
    <string name="empty_record">还没有识别记录，快去拍照识别吧！</string>
    <string name="empty_today">今天还没有记录，快去拍照识别吧！</string>
</resources>
