...
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginStart="30dp"-->
        <!--android:textSize="18sp"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/colorTextMsg"-->
        <!--android:text="100" />-->
    <!--<TextView-->
        <!--android:id="@+id/show1_kj"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="20dp"-->
...
