<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">


        <ImageView
            android:id="@+id/changePwIcon"
        android:layout_width="154dp"
        android:layout_height="179dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/icon1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/change_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/change_pw"
            android:textAlignment="center"
            android:textColor="#02576C"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/change_phone"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/input_phone"
            android:inputType="number" />

        <EditText
            android:id="@+id/change_pwd"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/input_pwd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/change_pwd_again"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/input_pwd_again"
            android:inputType="textPassword" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_msg_c"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/input_msg"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/get_msg_c"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="获取验证码" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            app:backgroundTint="#BDEDE6"
            app:srcCompat="@drawable/gou" />

    </LinearLayout>


</RelativeLayout>