...
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="获取验证码" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            app:backgroundTint="#BDEDE6"
            app:srcCompat="@drawable/gou" />
...
